WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54548
Web Inspector: chromium: DRT is crashing on the tests in inspector-enabled folder
https://bugs.webkit.org/show_bug.cgi?id=54548
Summary
Web Inspector: chromium: DRT is crashing on the tests in inspector-enabled fo...
Ilya Tikhonovsky
Reported
2011-02-16 05:08:22 PST
%subj%
Attachments
[patch] initial version
(3.26 KB, patch)
2011-02-16 05:18 PST
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2011-02-16 05:18:53 PST
Created
attachment 82617
[details]
[patch] initial version
Ilya Tikhonovsky
Comment 2
2011-02-16 05:22:23 PST
Comment on
attachment 82617
[details]
[patch] initial version Clearing flags on attachment: 82617 Committed
r78699
: <
http://trac.webkit.org/changeset/78699
>
Ilya Tikhonovsky
Comment 3
2011-02-16 05:22:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug