2011-02-16  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: chromium: DRT is crashing on the tests in inspector-enabled folder.
        https://bugs.webkit.org/show_bug.cgi?id=54548

        Bug in chromium DRT implementation was fixed.
        The tests were enabled.

        * platform/chromium/test_expectations.txt:
2011-02-16  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: chromium: DRT is crashing on the tests in inspector-enabled folder.
        https://bugs.webkit.org/show_bug.cgi?id=54548

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::runFileTest):

Canonical link: https://commits.webkit.org/68679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78699 268f45cc-cd09-0410-ab3c-d52691b4dbfc